--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,22 @@
   @apply w-full px-4 py-1 border text-sm border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500;
 }
 
+@keyframes wiggle {
+  0% {
+    transform: rotate(-90deg);
+  }
+  
+   100% {
+    transform: rotate(90deg);
+  }
+}
+
+.animate-wiggle {
+  animation: wiggle 0.5s ease-in-out infinite;
+}
+
+
+
 @keyframes float-slow {
   0%, 100% {
     transform: translateY(0px) translateX(0px);
